	  undeclared cursor.

We Jul  5 12:17:28 CEST 2006

	- Fixed most of the remaining Coverity bugs.

Fr Jul 28 11:00:51 CEST 2006

	- Added more SoC changes by Joachim Wieland <joe@mcknight.de>:
		- SHOW statement puts result into a variable
		- COPY TO STDOUT works
		- Connection identifier has to be unique
	- Variables should be free'ed only once.

Tu Aug  1 15:04:52 CEST 2006

	- Applied patch by Joachim Wieland <joe@mcknight.de> to fix segfault
	  occuring when using --enable-thread-safety.

We Aug  2 13:15:25 CEST 2006

	- Synced parser and keyword list.
	- Implemented EXEC SQL UNDEF.
	- Applied first version of the regression test patch by Joachim
	  Wieland <joe@mcknight.de>.

Fr Aug  4 10:44:30 CEST 2006

	- Applied test suite update by Joachim Wieland <joe@mcknight.de>.

Mo Aug  7 14:56:44 CEST 2006

	- Joachim fixed some bugs in numeric handling in pgtypeslib.

Tu Aug  8 13:26:25 CEST 2006

	- Made parser check for valid copy to/from stdin/stdout combinations.

We Aug  9 09:28:56 CEST 2006

	- Fixed error handling in numeric conversion (Joachim).
	- Fixed some memory bugs that somehow reappeared.
	- Also fixed a new Coverity report.

Su Aug 13 11:01:13 CEST 2006

	- Applied patch for VPATH builds by Alvaro Herrera
	  <alvherre@commandprompt.com>
	- Merged dyntest.pgc and dyntest2.pgc.

Mo Aug 14 10:39:59 CEST 2006

	- Added lots of SoC stuff made by Joachim.
	- Fixed broken newline on Windows.
	- Fixed a nasty buffer underrun that only occured when using Informix
	  no_indicator NULL setting on timestamps and intervals.
<<<<<<< ChangeLog

Fr 18. Aug 17:32:54 CEST 2006

	- Changed lexer to no longer use the default rule.
	- Synced parser and keyword list.
	- Fixed parsing of CONNECT statement so it accepts a C string again.
	- Fixed a buffer overrun that was masked on Linux systems.

Sa 19. Aug 14:11:32 CEST 2006

	- More SoC stuff.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.